--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/action_about"
         android:showAsAction="always"
         android:title="@string/action_settings"/>
+
     <item
-        android:id="@+id/share"
+        android:id="@+id/action_help"
         android:showAsAction="always"
-        android:title="Share"
-        android:actionProviderClass=
-            "android.widget.ShareActionProvider" />
+        android:title="Aide"/>
+
 </menu>
