--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="bg_screen3">#93c6fd</color>
     <color name="bg_screen4">#e4b5fc</color>
     <color name="bg_screen5">#FBFCFA</color>
+    <color name="bg_screen6">#FFE4E1</color>
 
     <!-- dots inactive colors -->
     <color name="dot_dark_screen1">#d1395c</color>
